correct positioning of all gifs
based on the type of gif, we now support four different modes of
positioning:

* default: centered and full-height
* center-vertical: for portrait gifs, which should be cropped + centered
* cover: gif spans entire width AND height of card
* iframe: gif spans entire width OR height

--- a/styles/card.styl
+++ b/styles/card.styl
@@ -46,6 +46,34 @@
   &__giphy
     pointer-events none
     overflow hidden
+    display flex
+    align-items center
+    justify-content center
+    height 100%
+
+    &--center-vertical
+      object-fit scale-down
+      object-position center
+      display flex
+      justify-content center
+      & ^[0..1]-gif
+         max-width initial
+
+    &--cover
+      & ^[0..1]-gif
+        height 100%
+        width 100%
+        object-fit cover
+
+    &--iframe
+      display flex
+      align-items center
+      justify-content center
+
+    &-gif
+      height 100%
+      max-width 100%
+      max-height 100%
 
   &--show-giphy
     & .card__overlay
